<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kp.com.helloworld.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billAmount"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount"
        android:textSize="20sp"
        android:padding="10sp"
        android:id="@+id/billAmountLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textSize="20sp"
        android:padding="10sp"
        android:layout_below="@+id/billAmountLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/percentLabel"
        android:layout_alignEnd="@+id/billAmountLabel" />

    <TextView
        android:text="15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:ems="4"
        android:padding="10sp"
        android:id="@+id/percent"
        android:layout_alignBaseline="@+id/percentLabel"
        android:layout_alignStart="@+id/billAmount"
        android:layout_above="@+id/tipLabel" />

    <Button
        android:text="@string/minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/minus"
        android:layout_alignTop="@+id/percentLabel"
        android:layout_alignBottom="@+id/percentLabel"
        android:layout_toEndOf="@+id/percent"
        android:layout_marginStart="15dp" />

    <Button
        android:text="@string/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/plus"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/minus"
        android:layout_alignTop="@+id/minus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="3"
        android:id="@+id/tip"
        android:layout_alignTop="@+id/tipLabel"
        android:layout_alignStart="@+id/percent"
        android:layout_alignBottom="@+id/tipLabel" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="3"
        android:id="@+id/total"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tip"
        android:layout_alignStart="@+id/tip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/total"
        android:textSize="20sp"
        android:padding="10sp"
        android:id="@+id/totalLabel"
        android:layout_alignTop="@+id/total"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/tipLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/tip"
        android:textSize="20sp"
        android:padding="10sp"
        android:layout_marginTop="16dp"
        android:id="@+id/tipLabel"
        android:layout_below="@+id/percentLabel"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/percentLabel" />

</RelativeLayout>
